--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
+/nbproject/project.properties
+/manifest.mf
 /nbproject/build-impl.xml
 /src/aam/gui/ButtonFrame.form
 /nbproject/project.xml
 /nbproject/genfiles.properties
-/nbproject/project.properties
 /build.xml
-/build/
